--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>안녕하세요!</h1>
+    <h1>안녕하세요</h1>
     <p>정보융합학부 2021204090 김준호 입니다</p>
     
 </body>
